--- a/.env.example
+++ b/.env.example
@@ -16,4 +16,10 @@ NODE_ENV=development
 
 # Authentication
 JWT_SECRET=your_jwt_secret
-JWT_EXPIRES_IN=7d 
+JWT_EXPIRES_IN=7d
+
+# API Keys
+GOOGLE_MAPS_API_KEY=your_google_maps_api_key_here
+GOOGLE_CLOUD_API_KEY=your_google_cloud_api_key_here
+
+# Add any other environment variables your app needs 
